--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   <body>
     <header class='header'>
       <div class="header-logo">
-        <img src="logo_yota.svg" alt="">
+        <img src="logo_yota.svg" alt="YOTA">
+      </div>
+      <div class="work-links">
+        <a class="crm" target="_blank" href="https://tpcrm.yotateam.com">CRM</a>
+        <a class="hotline" target="_blank"
+          href="https://www.yota.ru/hotline-retail">Hotline</a>
+        <a class="tables"
+          href="https://docs.google.com/spreadsheets/d/1NzylgflxeRipP5cMJOtD2PywmbhLs2cvb9yEmC9vMzA/edit?pli=1#gid=0" target="_blank">Ежедневный отчет
+        </a>
+        <a class="location" target="_blank"
+          href="https://cc-gis.yotateam.com/Account/LogOn?ReturnUrl=%2f">Yota Gis</a>
       </div>
     </header>
     <div class="container">
@@ -22,13 +32,10 @@
           <button class="delete-button" type="button" name="button"></button>
         </div>
       </template>
-      <form class="input-text" action='https://www.yota.ru' method='post'>
+      <form class="input-text"  method='post'>
         <input type="text" name="new-task" placeholder="Новая задача..." required>
         <button class='submit-button' type="submit" name="button">Новая задача</button>
       </form>
-      <div class="message">
-        <p>Все задачи выполнены</p>
-      </div>
     </div>
 
     <script type="text/javascript" src="index.js">
