add advice complete function

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </a>
       </div>
     </header>
+
     <div class="main">
 
       <div class="advices">
-        <div class="advice-item">
+        <div class="advice-item advice-item-1">
           <div class="advice-item__header">
             Откытие Смены
           </div>
@@ -68,7 +69,7 @@
           </ol>
         </div>
 
-        <div class="advice-item">
+        <div class="advice-item advice-item-2">
           <div class="advice-item__header">
             Закрытие Смены
           </div>
