sort files and add final fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class='header'>
       <div class="header-logo">
-        <img src="logo_yota.svg" alt="YOTA">
+        <img src="img/logo_yota.svg" alt="YOTA">
       </div>
       <div class="work-links">
         <a class="crm" title="CRM" target="_blank" href="https://tpcrm.yotateam.com">CRM
@@ -25,6 +25,9 @@
         <a class="location" title="КАРТА ПОКРЫТИЯ" target="_blank"
           href="https://cc-gis.yotateam.com/Account/LogOn?ReturnUrl=%2f">Yota Gis
         </a>
+        <a class="study" title="YOTA STUDY" target="_blank"
+          href="https://yota.study/">Yota Study
+        </a>
       </div>
     </header>
 
@@ -33,7 +36,7 @@
       <div class="advices">
         <div class="advice-item advice-item-1">
           <div class="advice-item__header">
-            Откытие Смены
+            Открытие Смены
           </div>
           <ol class="advice-item__text">
             <li>
