--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           </div>
           <ol class="advice-item__text">
             <li>
+              <label class="advice-name" style='color: red'>Логин: yotaru\KMaslennikov<br>
+                                          Пароль: GupcbG25k@
+                <input class="advice-item__checkbox" type="checkbox" name="" value="">
+              </label>
+            </li>
+            <li>
               <label class="advice-name" >Включить свет
                 <input class="advice-item__checkbox" type="checkbox" name="" value="">
               </label>
