replace yota info

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <body>
     <header class='header'>
       <div class="header-logo">
-        <img src="img/logo_yota.svg" alt="YOTA">
+        <img src="img/js_logo.png" alt="JS">
       </div>
       <div class="work-links">
-        <a class="crm" title="CRM" target="_blank" href="https://tpcrm.yotateam.com">CRM
+        <a class="crm" title="CRM" target="_blank" href="https://tpcrm.JSteam.com">CRM
         </a>
         <a class="hotline" title="HOTLINE" target="_blank"
-          href="https://www.yota.ru/hotline-retail">Hotline
+          href="https://www.JS.ru/hotline-retail">Hotline
         </a>
         <a class="iknow" title="IKNOW" target="_blank"
-          href="https://iknow.yotateam.com/pages/viewpage.action?pageId=29753733">IKNOW
+          href="https://iknow.JSteam.com/pages/viewpage.action?pageId=29753733">IKNOW
         </a>
         <a class="tables" title="ЕЖЕДНЕВНЫЙ ОТЧЕТ"
           href="https://docs.google.com/spreadsheets/d/1NzylgflxeRipP5cMJOtD2PywmbhLs2cvb9yEmC9vMzA/edit?pli=1#gid=0" target="_blank">Ежедневный отчет
         </a>
         <a class="location" title="КАРТА ПОКРЫТИЯ" target="_blank"
-          href="https://cc-gis.yotateam.com/Account/LogOn?ReturnUrl=%2f">Yota Gis
+          href="https://cc-gis.JSteam.com/Account/LogOn?ReturnUrl=%2f">JS Gis
         </a>
-        <a class="study" title="YOTA STUDY" target="_blank"
-          href="https://yota.study/">Yota Study
+        <a class="study" title="JS STUDY" target="_blank"
+          href="https://JS.study/">JS Study
         </a>
       </div>
     </header>
@@ -46,7 +46,7 @@
               </label>
             </li>
             <li>
-              <label class="advice-name" >Открыть смену в YotaForce
+              <label class="advice-name" >Открыть смену в JSForce
                 <input class="advice-item__checkbox" type="checkbox" name="" value="">
               </label>
             </li>
@@ -104,7 +104,7 @@
               </label>
             </li>
             <li>
-              <label class="advice-name" >Закрыть смену в YotaForce
+              <label class="advice-name" >Закрыть смену в JSForce
                 <input class="advice-item__checkbox" type="checkbox" name="" value="">
               </label>
             </li>
